--- a/config.json
+++ b/config.json
@@ -2,8 +2,8 @@
   "name": "懒洋洋喝咖啡",
   "title": "懒洋洋喝咖啡",
   "model": "light",
-  "description": "记录生活中的美好瞬间，通过我的镜头记录每日的温暖和情感。",
-  "url": "https://pix.tanmantang.com",
+  "description": "记录生活中的美好瞬间，通过我的镜头记录的温暖和情感。",
+  "url": "https://oreo.tanmantang.com",
   "author": {
     "name": "谭满堂",
     "url": "https://tanmantang.com/",
@@ -16,8 +16,7 @@
   "social": {
     "github": "tangmantan/afilmory",
     "gitee": "tanmantang/afilmory",
-    "douyin": "https://douyin.com",
-    "rss": true
+    "douyin": "https://douyin.com"
   },
   "storage": {
     "provider": "s3",
