同步至https://github.com/Afilmory/afilmory/commit/6fafb5710ef28f6536146c768f294918126a9ee2

--- a/config.json
+++ b/config.json
@@ -16,13 +16,14 @@
   "social": {
     "github": "tangmantan/afilmory",
     "gitee": "tanmantang/afilmory",
-    "douyin": "https://douyin.com"
+    "douyin": "https://douyin.com",
+    "rss": false
   },
   "storage": {
     "provider": "s3",
     "bucket": "tanmantang",
     "region": "oss-cn-chengdu",
-    "prefix": "afilmory/",
+    "prefix": "test/",
     "endpoint": "https://oss-cn-chengdu.aliyuncs.com"
   }
 }
