--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
   "title": "懒洋洋喝咖啡",
   "model": "light",
   "description": "记录生活中的美好瞬间，通过我的镜头记录的温暖和情感。",
-  "url": "https://oreo.tanmantang.com",
+  "url": "https://prep.tanmantang.com",
   "author": {
     "name": "谭满堂",
     "url": "https://tanmantang.com/",
