fix: 修正存储端点URL以移除多余路径

--- a/config.json
+++ b/config.json
@@ -22,6 +22,6 @@
     "bucket": "photo",
     "region": "auto",
     "prefix": "/",
-    "endpoint": "https://be7657880f250094d3afe63bfd5ada19.r2.cloudflarestorage.com/photo"
+    "endpoint": "https://be7657880f250094d3afe63bfd5ada19.r2.cloudflarestorage.com"
   }
 }
